--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,174 @@
 ---
 title: "Reproducible Research: Peer Assessment 1"
+author: "Tamer Salem"
+date: "March 9, 2020"
 output: 
   html_document:
     keep_md: true
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE, fig.path="figure/activity")
+```
+```{r echo=TRUE, cache=TRUE}
+# Operate in current directory
+setwd(getSrcDirectory(function(x) {x}))
+```
 
 ## Loading and preprocessing the data
 
+```{r echo=TRUE, cache=TRUE}
+activity.data.raw <- read.csv(file="activity.csv", header=TRUE, sep=",")
+print(paste0("Number Rows (raw data)=", nrow(activity.data.raw)))
+print(head(activity.data.raw))
+```
 
+The original data has many incomplete cases, i.e., those with NA values.  Reduce the set down to those with complete data.
+```{r echo=TRUE, cache=TRUE}
+activity.data.tidy <- activity.data.raw[complete.cases(activity.data.raw),]
+print(paste0("Number Rows (tidy data)=", nrow(activity.data.tidy)))
+print(head(activity.data.tidy))
+```
 
 ## What is mean total number of steps taken per day?
 
+Ignore the incomplete data - use the tidy set.  
 
+First get the unique days.  Then, count the number of step taken each day.
+```{r echo=TRUE, cache=TRUE}
+unique.days <- unique(activity.data.tidy[,2])
+steps.per.day <- integer(length=length(unique.days))
+i <- 1
+for( day in unique.days ) {
+  day.values <- activity.data.tidy[activity.data.tidy$date==day,]
+  steps.per.day[i] <- sum(day.values[,1])
+  i <- i+1
+}
+```
+Create a histogram of the number of steps per day.
+```{r echo=TRUE, cache=TRUE}
+hist(steps.per.day, main="Steps per Day (Tidy Data)", xlab="Number of Steps per Day", ylab="Number of Days", breaks=12,
+     xlim=c(0,25000), ylim=c(0,20))
+```
+Mean and median of steps per day:
+```{r echo=TRUE, cache=TRUE}
+print(paste0("Mean (Steps per day): ", mean(steps.per.day)))
+print(paste0("Median (Steps per day): ", median(steps.per.day)))
+```
 
 ## What is the average daily activity pattern?
 
+Extract the intervals and calculate the mean of the daily number of steps in each of those intervals.
+```{r echo=TRUE, cache=TRUE}
+unique.intervals <- unique(activity.data.tidy[,3])
+mean.steps.per.interval <- integer(length=length(unique.intervals))
+i <- 1
+for( interval in unique.intervals ) {
+  interval.values <- activity.data.tidy[activity.data.tidy$interval==interval,]
+  mean.steps.per.interval[i] <- mean(interval.values[,1])
+  i <- i+1
+}
+df <- data.frame(intervals=unique.intervals, mean_steps=mean.steps.per.interval)
+plot(x=df$intervals, y=df$mean_steps, type="l", main="Average Daily Activity Pattern (Tidy Data)", xlab="Interval of Day",
+     ylab="Mean Number of Steps")
+```
 
 
 ## Imputing missing values
 
+```{r echo=TRUE, cache=TRUE}
+number.NAs <- nrow(activity.data.raw) - nrow(activity.data.tidy)
+```
 
+There are `r nrow(activity.data.raw)` total rows in the original data.  There are `r number.NAs` missing values (rows with NAs) in the original data set.  A reasonable strategy for imputing the 
+values for the missing steps is to use the mean number of steps for the interval whose value is missing.  That
+value can be found from the data frame *df*.  Using that strategy, synthesize a complete data set.
+```{r echo=TRUE, cache=TRUE}
+activity.synthesized.data <- activity.data.raw
+for( i in 1:nrow(activity.synthesized.data) ) {
+  if( is.na(activity.synthesized.data[i,]$steps) ) {
+    activity.synthesized.data[i,]$steps <- df[df$intervals==activity.synthesized.data[i,]$interval,]$mean_steps
+  }
+}
+# Double check that there are no NAs left
+print(summary(complete.cases(activity.synthesized.data)))
+```
+Now, recreate the histogram of the data and report the mean and median values on the synthesized data with imputed values.  
+```{r echo=TRUE, cache=TRUE}
+unique.days.imputed <- unique(activity.synthesized.data[,2])
+steps.per.day.imputed <- integer(length=length(unique.days.imputed))
+i <- 1
+for( day in unique.days.imputed ) {
+  day.values.imputed <- activity.synthesized.data[activity.synthesized.data$date==day,]
+  steps.per.day.imputed[i] <- sum(day.values.imputed[,1])
+  i <- i+1
+}
+hist(steps.per.day.imputed, main="Steps per Day (Imputed Data)", xlab="Number of Steps per Day", ylab="Number of Days", breaks=12,
+     xlim=c(0,25000), ylim=c(0,25))
+```
+
+The mean and mean number of (imputed) steps per day:
+```{r echo=TRUE}
+print(mean(steps.per.day.imputed))
+print(median(steps.per.day.imputed))
+```
+To better see the effect of imputing the data, use a data frame
+```{r echo=TRUE, cache=TRUE}
+effect.df <- data.frame(mean=c(mean(steps.per.day),mean(steps.per.day.imputed)),
+                        median=c(median(steps.per.day),median(steps.per.day.imputed)))
+row.names(effect.df) <- c("Tidy", "Imputed")
+print(effect.df)
+```
+The fact that the mean values are equivalent should be expected since we are assigning the missing values as the mean
+values.  We note that the difference in the mean and median values of the tidy set is small, so it is not surprising
+that the difference in the median values between the tidy and synthesized (imputed) data is also very small.  It is also
+interesting that the median vale for the synthesized set is the same as the mean value - likely the effect of assigning
+so many mean values back into the synthesized set.
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+Add a factor variable (as a column) to the synthesized dataset to distinguish between weekdays and weekends.
+```{r echo=TRUE, cache=TRUE}
+days.of.week <- weekdays(as.Date(activity.synthesized.data$date))
+day.factor <- lapply(days.of.week, function(x) if(x=="Saturday" || x=="Sunday") "weekend" else "weekday")
+day.factor <- as.factor(unlist(day.factor))
+cnames <- colnames(activity.synthesized.data)
+sap.activity.data <- cbind(activity.synthesized.data, day.factor)
+colnames(sap.activity.data) <- c(cnames, "weekday_or_weekend")
+print(head(sap.activity.data))
+```
+
+Create a panel plot (time series) for weekday and weekend values.
+
+```{r echo=TRUE, cache=TRUE}
+wk.end <- sap.activity.data[sap.activity.data$weekday_or_weekend=="weekend",]
+wk.day <- sap.activity.data[sap.activity.data$weekday_or_weekend=="weekday",]
+unique.intervals <- unique(wk.end[,3])
+mean.steps.per.interval <- integer(length=length(unique.intervals))
+i <- 1
+for( interval in unique.intervals ) {
+  interval.values <- wk.end[wk.end$interval==interval,]
+  mean.steps.per.interval[i] <- mean(interval.values[,1])
+  i <- i+1
+}
+wk.end.df <- data.frame(intervals=unique.intervals, mean_steps=mean.steps.per.interval)
+unique.intervals <- unique(wk.day[,3])
+mean.steps.per.interval <- integer(length=length(unique.intervals))
+i <- 1
+for( interval in unique.intervals ) {
+  interval.values <- wk.day[wk.day$interval==interval,]
+  mean.steps.per.interval[i] <- mean(interval.values[,1])
+  i <- i+1
+}
+wk.day.df <- data.frame(intervals=unique.intervals, mean_steps=mean.steps.per.interval)
+layout(matrix(1:2,ncol=1),widths=1,heights=c(2,2),respect=FALSE)
+par(mar = rep(0, 4), oma=c(4, 4, 4, 2), las=1)
+plot(x=wk.day.df$intervals, y=wk.day.df$mean_steps, type="l", ann=FALSE, xaxt='n', col=2)
+legend(1900,170,legend=c("Weekday"), yjust=0)
+plot(x=wk.end.df$intervals, y=wk.end.df$mean_steps, type="l", ann=FALSE, col=3)
+legend(1900,120,legend=c("Weekend"), yjust=0)
+mtext("Interval of Day", side=1, line=3, outer=TRUE)
+mtext("Mean Number of Steps", side=2, line=3, outer=TRUE, las=0)
+mtext("Average Activity Pattern (Synthesized Data)", side=3, line=1, outer=TRUE, cex=2, font=1)
+
+```
